[gd_scene load_steps=4 format=3 uid="uid://h6m0obuub6nc"]

[ext_resource type="Script" uid="uid://bpce5qnt4tcle" path="res://addons/copy_files_on_export/manage_item_popup.gd" id="1_0rh2a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0rh2a"]
bg_color = Color(0.0705882, 0.137255, 0.196078, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0rh2a"]
font_size = 12
font_color = Color(1, 0, 0, 1)

[node name="Popup" type="Window"]
initial_position = 4
size = Vector2i(300, 450)
visible = false
transient = true
exclusive = true
script = ExtResource("1_0rh2a")
action_text = "Add"

[node name="PanelContainer" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0rh2a")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SourcePathLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Source path:"

[node name="ChooseFileContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="SourcePathTextEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/ChooseFileContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="FilePopupButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ChooseFileContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Select"

[node name="SourceErrorLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_0rh2a")

[node name="PathLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Path in export location:"

[node name="DestinationTextEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
placeholder_text = "path/to/file.txt"

[node name="PathErrorLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_0rh2a")

[node name="FeaturesLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Limit to features (optional):"

[node name="FeaturesLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "windows, web, ..."

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="AddButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Add"

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Select a File or Directory"
initial_position = 4
size = Vector2i(400, 400)
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 3
